--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,6 @@
 <!--        </plugins>-->
 
 <!--    </build>-->
-
     <build>
         <plugins>
             <plugin><!--derlemek için-->
@@ -168,8 +167,8 @@
                 <configuration>
 
                     <includes>
-                        <!-- for  run class or classes  /:bulunduğu lokasyonu bütün klasörlere göre bulabiliyor   -->
-                        <include>/_04_TestRunnerSmoke.java</include>
+                        <!-- for  run class or classes  **/:bulunduğu lokasyonu bütün klasörlere göre bulabiliyor   -->
+                        <include>**/_04_TestRunnerSmoke.java</include>
                     </includes>
                     <testFailureIgnore>true</testFailureIgnore>
 
@@ -178,5 +177,53 @@
         </plugins>
     </build>
 
+    <profiles>
+    <profile>
+    <id>Smoke_yeni</id>
+    <build>
+        <plugins>
+            <plugin><!--derlemek için-->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <configuration>
+
+                    <includes>
+                        <!-- for  run class or classes ** /:bulunduğu lokasyonu bütün klasörlere göre bulabiliyor   -->
+                        <include>**/_04_TestRunnerSmoke.java</include>
+                    </includes>
+                    <testFailureIgnore>true</testFailureIgnore>
+
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    </profile>
+
+
+
+            <profile>
+                <id>Regression</id>
+                <build>
+                    <plugins>
+                        <plugin><!--derlemek için-->
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <version>3.0.0-M1</version>
+                            <configuration>
+
+                                <includes>
+                                    <!-- for  run class or classes  **/:bulunduğu lokasyonu bütün klasörlere göre bulabiliyor   -->
+                                    <include>**/_06_TestRunnerRegressionWithPlugin.java</include>
+                                </includes>
+                                <testFailureIgnore>true</testFailureIgnore>
+
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </build>
+
+            </profile>
+    </profiles>
 
 </project>
